--- a/404.md
+++ b/404.md
@@ -1,9 +1,10 @@
 ---
-permalink: /404.html
 layout: default
-title: 404
+title: 404 - Page not found
 description: The requested page could not be found.
+image: None
 ---
 
-The requested page could not be found.
+The requested page was not found on this server. Please <script>getInternalLink('contact', 'contact.html')</script> Christian Matt
+for further information.
 
