Update content and optimize integration of links.

--- a/404.md
+++ b/404.md
@@ -5,6 +5,6 @@ description: The requested page could not be found.
 image: None
 ---
 
-The requested page was not found on this server. Please <script>getInternalLink('contact', 'contact.html')</script> Christian Matt
+The requested page was not found on this server. Please {% include links/internal.html url="contact.html" name="contact"%} Christian Matt
 for further information.
 
